--- a/css/about1.css
+++ b/css/about1.css
@@ -199,7 +199,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     
 }
 
-@media screen and (min-width:320px) and (max-width:767px) {
+@media all and (max-width:767px) {
     .nav_logo h1 img {width: 60%;}
     .nav_gnb {display: none;}
     .toggle {display: block;}
@@ -215,13 +215,13 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .cont_c ul li {width: 100%; padding: 40px 0;}
     .txtarea:after {width: 35px;}
     .memberCountCon {font-size: 36px;}
-    .cont_b {height: 1220px;}
+    .cont_b {height: 800px;}
     .c_tit {font-size: 20px;}
     .c_ttit {font-size: 36px;}
     
     .b_list ul {width: 100%; margin-top: 20px; padding-top: 20px;}
-    .b_list ul li {font-size: 14px;}
-    .b_container {padding-top: 85px;}
+    .b_list ul li {font-size: 12px; line-height: 30px;}
+    .b_container {padding-top: 85px; width: 95%; padding-left: 5%;}
     .b_container h3 {font-size: 22px;}
     
    
