--- a/css/business.css
+++ b/css/business.css
@@ -338,7 +338,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     
 }
 
-@media screen and (min-width:320px) and (max-width:767px) {
+@media all and (max-width:767px) {
     .nav_logo h1 img {width: 60%;}
     .nav_gnb {display: none;}
     .toggle {display: block;}
