--- a/css/talent.css
+++ b/css/talent.css
@@ -283,11 +283,12 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .tg ul li .part {font-size: 14px;}
     .tg ul li i {font-size: 20px; line-height: 80px;}
     
-    .click {width: 90%; top: 33%;}
-    .mtxt {font-size: 20px;}
+    .click {width: 90%; top: 17%;}
+    .mtxt {font-size: 20px; margin-top: 30px;}
     .mtxt:before {width: 30px;}
-    .smtxt {font-size: 14px; line-height: 30px; padding-left: 20px;}
-    .bg_box h3{font-size: 80px; top: 200px;}
+    .smtxt {font-size: 14px; line-height: 24px; padding-left: 20px;}
+    .smtxt p {margin-top: 30px; letter-spacing: 0.5px;}
+    .bg_box h3{font-size: 40px; top: 50px;}
     .tg ul li .add  {font-size: 14px; line-height: 25px;}
     .tg ul li .add p {text-indent: 10px;}
     .tg ul li .add span {text-indent: 10px;}
