--- a/css/index.css
+++ b/css/index.css
@@ -381,7 +381,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .bottom ul li p {font-size: 30px; top: 30px;}
     .bottom ul li span {font-size: 14px; top: 100px; width: 61%;}
     
-    .left_tab {width: 100%; float:none; height: 100px; border-right: none;}
+    .left_tab {width: 100%; float:none; height: 100px; border-right: none; top: 0;}
     .left_tab ul:after {display: block; clear: both; content:"";}
     .left_tab ul li {float:left; padding: 15px 0; width: 50%;}
     .left_tab ul li a {font-size: 14px;}
