--- a/css/notice.css
+++ b/css/notice.css
@@ -153,16 +153,15 @@ nav {width: 100%; position: relative; margin: 0 auto;}
 
 /*footer*/
 .footer {height: 160px; background:black; width: 100%; position: relative; bottom: 0; color: white;}
-.footer:after {display: block; clear: both; content:"";}
-.footer_logo {float:left; margin-top: 50px; width: 20%; padding-left: 5%;}
-.footer_container {width: 80%; float:left; margin-top: 50px;}
-.footer_list { padding-left: 5%;font-size: 18px; font-weight: bold;}
-.footer_info {padding-left: 5%; font-size: 16px; line-height: 40px;}
-.footer_info ul {}
-.footer_info ul:after {content:""; display: block; clear: both;}
-.footer_info ul li {float:left; font-size: 16px; line-height: 40px; margin-right: 15px;}
+.footer_logo {position: absolute; left: 1%;}
+.footer_logo h2 {margin-top: 30px;}
+.footer_logo h2 img {width: 70%;}
+.footer_container {margin: 0 auto; padding-top: 30px; padding-left: 20%;}
+.footer_list {font-size: 18px; font-weight: bold; position: relative;}
+.footer_info {position: relative;}
+.footer_info ul:after {display: block; content:""; clear: both;}
+.footer_info ul li {font-size: 16px; float:left; line-height: 40px; margin-right: 15px;}
 
-.copyright {padding-left: 5%;}
 
 
 
@@ -233,7 +232,8 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     
     #TB .page_num .back {display: inline-block; width: 25px; height: 24px; background: url(../images/notice/back.png); position: relative; top: 10px; background-size: cover;}
     
-    
+    .footer_container {padding-left: 30%;}
+    .footer_logo h2 img {width: 60%;}
     .footer_list {font-size: 15px;}
     .footer_info ul li {font-size: 13px;}
     .copyright {font-size: 13px;}
@@ -288,14 +288,15 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     
     #TB .page_num .back {display: inline-block; width: 25px; height: 24px; background: url(../images/notice/back.png); position: relative; top: 10px; background-size: cover;}
     
+    #TB .page_num {margin-bottom: 10%;}
     
     .footer {position: relative; height: 316px;}
-    .footer_container {width: 100%;}
-    .footer_logo {float:none; width: 100%; text-align: center;}
-    .footer_logo img {padding-top: 10px;}
-    .footer_list {padding-left: 0%; text-align: center; font-size: 15px; line-height: 30px;}
-    .footer_info ul li {font-size: 13px; width: 100%; text-align: center; line-height: 25px;}
-    .copyright {padding-left: 0%; text-align: center; font-size: 13px;}
+    .footer_logo {left: 50%; transform: translateX(-50%); text-align: center;}
+    .footer_logo h2 img {width: 70%;}
+    .footer_container {padding-top: 150px; padding-left: 10%;}
+    .footer_list {font-size: 14px;}
+    .footer_info ul li {font-size: 12px;}
+    .copyright {font-size: 12px;}
 }
 
 
