--- a/css/talent.css
+++ b/css/talent.css
@@ -261,6 +261,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .key_image h2 {font-size: 28px; padding-top: 80px;}
     .key_image p {font-size: 22px;}
     
+    .m_g_m {top: 120px;}
     
     .con_t {width: 80%;}
     .con_t h3 {font-size: 28px;}
