--- a/css/about1.css
+++ b/css/about1.css
@@ -207,6 +207,8 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .key_image h2 {font-size: 28px; padding-top: 80px;}
     .key_image p {font-size: 22px;}
     
+    .m_g_m {top: 120px;}
+    
     .cont_t ul li {width: 100%;}
     .cont_t ul li h3 {margin-top: 20px; font-size: 18px;}
     .cont_t ul li p {font-size: 14px; margin-top: 25px;}
