--- a/css/business.css
+++ b/css/business.css
@@ -353,6 +353,8 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .key_image h2 {font-size: 28px; padding-top: 80px;}
     .key_image p {font-size: 22px;}
     
+    .m_g_m {top: 120px;}
+    
     .con_1 .bgimg {width: 100%; float:none;}
     .con_1 .bgimg img {height: 400px;}
     .con_1_txt {top: 50px; left: 20px;}
