--- a/css/notice.css
+++ b/css/notice.css
@@ -250,6 +250,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .key_image p {font-size: 22px;}
     
     .m_txt h3 {font-size: 20px;}
+    .m_g_m {top: 120px;}
     
     #TB .news {width: 100%; margin: 0 auto;}
 	#TB .news thead {border-top: 3px solid black; border-bottom: 1px solid grey;}
