--- a/css/talent.css
+++ b/css/talent.css
@@ -143,7 +143,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
 .click_container {display: none;}
 .click_container.on {display: block;}
 .bg_box{position: fixed; width: 100%; height: 100%; background: rgba(0,0,0,0.7); top: 0; left: 0; z-index: 1;}
-.bg_box h3{position: absolute; width: 100%; text-align: center; font-size: 100px; top: 250px; color: rgba(255,255,255,0.9);}
+.bg_box p{position: absolute; width: 100%; text-align: center; font-size: 100px; top: 250px; color: rgba(255,255,255,0.9);}
 .bg_box i{cursor: pointer;}
 
 /*con_b*/
@@ -205,7 +205,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     
     .click {width: 70%;}
     .mtxt {font-size: 28px;}
-    .bg_box h3{font-size: 80px;}
+    .bg_box p{font-size: 80px;}
     
     .tg ul li .add  {font-size: 18px; line-height: 30px;}
     
@@ -241,7 +241,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     
     .click {width: 80%; top: 33%;}
     .mtxt {font-size: 26px;}
-    .bg_box h3{font-size: 60px; top: 200px;}
+    .bg_box p{font-size: 60px; top: 200px;}
     .tg ul li .add  {font-size: 15px; line-height: 30px;}
     
     .footer_container {padding-left: 30%;}
@@ -290,7 +290,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .mtxt:before {width: 30px;}
     .smtxt {font-size: 14px; line-height: 24px; padding-left: 20px;}
     .smtxt p {margin-top: 30px; letter-spacing: 0.5px;}
-    .bg_box h3{font-size: 30px; top: 130px;}
+    .bg_box p{font-size: 30px; top: 130px;}
     .tg ul li .add  {font-size: 14px; line-height: 25px;}
     .tg ul li .add p {text-indent: 10px;}
     .tg ul li .add span {text-indent: 10px;}
