--- a/css/about1.css
+++ b/css/about1.css
@@ -36,6 +36,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
 .nav_gnb ul:after {display: block; clear: both; content:"";}
 .nav_gnb ul li {float:left;}
 .nav_gnb ul li a {display: inline-block; margin-right: 50px; line-height: 120px; color: black; font-size: 16px;}
+.nav_gnb ul li a:hover {font-weight: bold;}
 
 /*header mobile gnb*/
 .m_gnb{position: absolute; left: 100%; width: 100%; height: 100vh; background:darkorange; z-index: 500;}
