--- a/css/notice.css
+++ b/css/notice.css
@@ -39,6 +39,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
 .nav_gnb ul:after {display: block; clear: both; content:"";}
 .nav_gnb ul li {float:left;}
 .nav_gnb ul li a {display: inline-block; margin-right: 50px; line-height: 120px; color: black; font-size: 16px;}
+.nav_gnb ul li a:hover {font-weight: bold;}
 
 /*header mobile gnb*/
 .m_gnb{position: absolute; left: 100%; width: 100%; height: 100vh; background:darkorange; z-index: 500;}
@@ -177,7 +178,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .m_txt h3 {font-size: 32px;}
     
     #TB .news {width: 90%; margin: 0 auto;}
-    #TB .news thead {border-top: 3px solid black; border-bottom: 1px solid grey;}
+    #TB .news thead {border-top: 5px solid #f15522; border-bottom: 2px solid grey;}
 	#TB .news thead tr td {font-weight: bold; font-size: 16px; padding-top: 1%; padding-bottom: 1%; padding-right: 1%; padding-left: 1%; text-align: center;}
 	#TB .news thead tr td.hnumber {width: 15%;}
 	#TB .news thead tr td.hname {width: 70%;}
@@ -200,7 +201,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .m_txt h3 {font-size: 30px;}
     
     #TB .news {width: 90%; margin: 0 auto;}
-	#TB .news thead {border-top: 3px solid black; border-bottom: 1px solid grey;}
+	#TB .news thead {border-top: 3px solid #f15522; border-bottom: 1px solid grey;}
 	
 	#TB .news thead tr td {font-weight: bold; font-size: 16px; padding-top: 1%; padding-bottom: 1%; padding-right: 1%; padding-left: 1%; text-align: center;}
 	#TB .news thead tr td.hnumber {width: 15%;}
@@ -253,7 +254,7 @@ nav {width: 100%; position: relative; margin: 0 auto;}
     .m_g_m {top: 120px;}
     
     #TB .news {width: 100%; margin: 0 auto;}
-	#TB .news thead {border-top: 3px solid black; border-bottom: 1px solid grey;}
+	#TB .news thead {border-top: 2px solid #f15522; border-bottom: 1px solid grey;}
 
 	#TB .news thead tr td {font-weight: bold; font-size: 16px; padding-bottom: 1%; padding-right: 1%; padding-left: 1%; text-align: center;}
 	#TB .news thead tr td.hnumber {width: 10%;}
